# ai-interviewer-video-module

./: README.md
ai-interviewer-vision/: pyproject.toml
ai-interviewer-vision/configs/: default.yaml  thresholds.yaml
ai-interviewer-vision/docker/: Dockerfile  docker-compose.yml
ai-interviewer-vision/scripts/: benchmark.py  calibrate.py  download_models.py
ai-interviewer-vision/src/app/: deps.py  main.py  schemas.py
ai-interviewer-vision/src/models_zoo/: deepface_wrap.py  pytorch_hub_wrap.py  tf_wrap.py
ai-interviewer-vision/src/pipeline/: deepfake.py  face_track.py  fusion.py  liveness.py  overlays.py  preprocess.py  video_io.py
ai-interviewer-vision/src/ui/: demo.html
ai-interviewer-vision/src/utils/: calib.py  logging.py  metrics.py
ai-interviewer-vision/tests/unit/: test_imports.py
