[project]
name = "ai-interviewer-vision"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic>=2",
  "opencv-python",
  "numpy",
  "torch",
  "torchvision",
  "deepface",
  "tensorflow; platform_system != 'Windows'",
  "onnxruntime-gpu; platform_system != 'Darwin'",
  "prometheus-client",
  "PyYAML",
  "websockets",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
